Fixed message text-overflow and wrapping and added realtime typing status indicator

--- a/chatroom-frontend/src/app/pages/chat/components/chatlist/chatlist-item/chatlist-item.component.scss
+++ b/chatroom-frontend/src/app/pages/chat/components/chatlist/chatlist-item/chatlist-item.component.scss
@@ -5,3 +5,9 @@
     color: nb-theme(color-basic-600);
     font-size: 12px;
 }
+.latest-message{
+    max-width: 250px !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+}
